--- a/flaskr/templates/base.html
+++ b/flaskr/templates/base.html
@@ -5,19 +5,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Postulabot</title>
     <link
+      rel="icon"
+      href="{{ url_for('static', filename='img/postulabot.ico') }}"
+    />
+    <link
       rel="stylesheet"
       href="{{ url_for('static', filename='css/output.css') }}"
     />
   </head>
-  <body>
-    <header>
-      <h1 class="text-3xl font-bold underline">Welcome to Postulabot</h1>
-    </header>
-    <main>
-      <p>This is the main content of the page.</p>
-    </main>
-    <footer>
-      <p>&copy; 2023 Postulabot. All rights reserved.</p>
-    </footer>
+  <body
+    class="w-full h-full flex flex-col antialiased bg-neutral-950 text-white"
+  >
+    {% block content %}{% endblock %}
   </body>
 </html>
