--- a/flaskr/templates/bot/ollama.html
+++ b/flaskr/templates/bot/ollama.html
@@ -13,7 +13,7 @@
 
       // Define endpoint URLs at the start
       const endpoints = {
-          chat: "{{ url_for('bot.chat') }}",
+          chat: "{{ url_for('bot.ask') }}",
           ask_pdf: "{{ url_for('bot.ragPdfPost') }}",
           upload: "{{ url_for('bot.pdfPost') }}"
       };
